--- a/app/assets/components/ui-elements/oj-annotation-marker.html
+++ b/app/assets/components/ui-elements/oj-annotation-marker.html
@@ -8,21 +8,23 @@
 
       <style>
           core-icon {
+            display:      block !important;
             stroke-width: 2px;
             transition:   all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.575);
-            cursor:       pointer;
           }
           core-icon.closed {
             height:       8px;
             width:        8px;
             margin-top:   -4px;
             margin-left:  -4px;
+            cursor:       pointer;
           }
           core-icon.open {
             height:       16px;
             width:        16px;
             margin-top:   -8px;
             margin-left:  -8px;
+            cursor:       default;
           }
 
           /* Icon State colors */
