Move existing colors into a common css file and constants

--- a/app/assets/components/ui-elements/oj-annotation-marker.html
+++ b/app/assets/components/ui-elements/oj-annotation-marker.html
@@ -19,31 +19,19 @@
             margin-left:  -4px;
             cursor:       pointer;
           }
+          core-icon.closed:hover {
+              stroke-width: 3px;
+              height:       10px;
+              width:        10px;
+              margin-top:   -5px;
+              margin-left:  -5px;
+          }
           core-icon.open {
             height:       16px;
             width:        16px;
             margin-top:   -8px;
             margin-left:  -8px;
             cursor:       default;
-          }
-
-          /* Icon State colors */
-
-          core-icon.state-unresolved {
-              fill: #d3df38 !important;
-              stroke:       #6b711c;
-          }
-          core-icon.state-resolved {
-              fill: #146efc !important;
-              stroke:       #0D47A1;
-          }
-          core-icon.state-disputed {
-              fill: #fe4539 !important;
-              stroke:       #a42d25;
-          }
-          core-icon.state-new {
-              fill:    #e0e0a0 !important;
-              stroke:  #e0e000;
           }
 
     </style>
