--- a/app/assets/components/ui-elements/oj-paper-collection.html
+++ b/app/assets/components/ui-elements/oj-paper-collection.html
@@ -20,7 +20,7 @@
         width: 100%;
       }
       core-list{
-        width: 100%
+        width: 100%;
         height: 100%;
         min-height: 800px;
       }
