Refactor some expressions into globals

--- a/app/assets/components/application.html
+++ b/app/assets/components/application.html
@@ -9,6 +9,7 @@
  *= require third-party-components
 
  *= require oj-global-expressions
+*= require oj-global-paper-expressions
 
  *= require elements/all
  *= require ui-elements/all
