--- a/app/assets/components/ui-elements/oj-reviewer.html
+++ b/app/assets/components/ui-elements/oj-reviewer.html
@@ -24,7 +24,7 @@
     Polymer({
       dismissable:true,
       remove: function(event){
-        event.preventDefault()
+        event.preventDefault();
         this.fire("remove-reviewer", this.reviewer)
       }
     })
