--- a/app/assets/components/ui-elements/oj-user-lookup.html
+++ b/app/assets/components/ui-elements/oj-user-lookup.html
@@ -45,7 +45,7 @@
       },
       selectName:function(event, detail, sender){
         this.fire("user-selected", sender.getAttribute("userid"))
-        this.search = ""
+        this.search = "";
         this.suggestions = []
       },
       response:function(event,detail){
