--- a/app/assets/components/oj-global-expressions.html
+++ b/app/assets/components/oj-global-expressions.html
@@ -1,22 +1,30 @@
 <script>
 
-    PolymerExpressions.prototype.isArray = function(obj) {
-        return Array.isArray(obj);
-    };
+    $.extend( PolymerExpressions.prototype, {
 
-    PolymerExpressions.prototype.isNotArray = function(obj) {
-        return ! Array.isArray(obj);
-    };
+        isArray: function(obj) {
+            return Array.isArray(obj);
+        },
 
-    PolymerExpressions.prototype.json = function(obj) {
-        return JSON.stringify(obj);
-    };
+        isNotArray: function(obj) {
+            return ! Array.isArray(obj);
+        },
 
-    PolymerExpressions.prototype.log = function(value, args) {
-        args = Array.prototype.slice.call(arguments, 1);
-        args.splice(1, 0, value);
-        console.info.apply(console, args);
-        return value;
-    };
+        not: function(obj) {
+            return ! obj;
+        },
+
+        json: function(obj) {
+            return JSON.stringify(obj);
+        },
+
+        log: function(value, args) {
+            args = Array.prototype.slice.call(arguments, 1);
+            args.splice(1, 0, value);
+            console.info.apply(console, args);
+            return value;
+        }
+
+    });
 
 </script>
