--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -19,4 +19,33 @@ body /deep/ {
     }
   }
 
+  section.boiler-plate {
+
+    font-family: $default_font;
+    padding: 10px 30px;
+
+    h1 + p {
+      margin-top: 0;
+    }
+
+    .question {
+      font-style: italic;
+      padding-bottom: 20px;
+    }
+
+    .answer {
+      p:first-child { margin-top: 0; }
+
+      ul {
+        font-family: $default_font;
+
+        li {
+          font-size: 0.9em;
+          line-height: 1.3em;
+        }
+      }
+
+    }
+  }
+
 }
