--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -9,7 +9,7 @@ body {
 body /deep/ {
 
   paper-button {
-    text-transform: none;
+    text-transform: lowercase;
 
     background: #3e50b4;
     color:      white;
