--- a/app/assets/components/ui-elements/oj-user-lookup.html
+++ b/app/assets/components/ui-elements/oj-user-lookup.html
@@ -1,11 +1,13 @@
-<polymer-element name='oj-user-lookup' attributes='placeholder'>
+<polymer-element name='oj-user-lookup' attributes='placeholder' >
   <template>
-    <input placeholder={{placeholder}} value={{search}} on-blur={{hideDropdown}} on-focus={{showDropdown}}></input>
-    <ul class='suggestions' hidden?={{dropdownHidden}}>
-      <template repeat="{{suggestion in suggestions}}">
-        <li on-tap="{{selectName}}" userid="{{suggestion.name}}">{{suggestion.name}}</li>
-      </template>
-    </ul>
+    <input id=input placeholder={{placeholder}} value={{search}}></input>
+    <core-dropdown class=suggestions relatedTarget={{$.input}} valign=bottom>
+        <core-menu>
+          <template repeat="{{suggestion in suggestions}}">
+            <core-item on-tap="{{selectName}}" userid="{{suggestion.name}}">{{suggestion.name}}</core-item>
+          </template>
+        </core-menu>
+    </core-dropdown>
 
     <json-get  id='lookUpSearch'
                url='/users/name_lookup'
@@ -23,16 +25,16 @@
           vertical-align: top;
       }
 
-      ul {
+      .suggestions {
+        display: none;
         position: absolute;
         z-index: 100;
-        padding:0;
-        margin:0;
-        list-style: none;
-        margin-top: -8px;
+        top: 13px;
+        left: -13px;
+        min-width: 250px;
       }
 
-      li {
+      core-item {
         box-sizing: border-box;
         padding:    5px 10px;
         background-color: #e7e7e7;
@@ -40,8 +42,16 @@
         border-bottom: 1px solid black;
         cursor: pointer;
       }
-      li:hover {
+      core-item:hover {
           background-color: #d0d0d0;
+      }
+      core-item.core-selected {
+          font-weight: normal;
+      }
+
+      /* Only show the drop down when the edit is focused */
+      input:focus + .suggestions, .suggestions:active, .suggestions:focus {
+          display: block;
       }
 
     </style>
@@ -64,15 +74,6 @@
               this.suggestions = [];
           }
        }, 300);
-      },
-
-      showDropdown: function() {
-        this.dropdownHidden = false;
-      },
-      hideDropdown: function() {
-        this.async( function() {
-            this.dropdownHidden = true;
-        }, null, 100);
       },
 
       selectName:function(event, detail, sender){
