--- a/app/assets/components/subpages/oj-review-page.html
+++ b/app/assets/components/subpages/oj-review-page.html
@@ -1,4 +1,4 @@
-<polymer-element name="oj-review-page" attributes='paper_id user'>
+<polymer-element name="oj-review-page" attributes='paper_id user router'>
   <template>
     <core-toolbar fixed layout>
 
@@ -24,7 +24,7 @@
     </core-toolbar>
 
     <template if="{{user.editor}}">
-      <oj-editor-paper-controls flex paper="{{paper}}"></oj-editor-paper-controls>
+      <oj-editor-paper-controls flex paper={{paper}} router={{router}}></oj-editor-paper-controls>
     </template>
 
     <template if="{{paper}}">
