--- a/app/assets/components/ui-elements/oj-paper-collection.html
+++ b/app/assets/components/ui-elements/oj-paper-collection.html
@@ -1,4 +1,4 @@
-<polymer-element name='oj-paper-collection' attributes="papers src">
+<polymer-element name='oj-paper-collection' attributes="src">
 
   <template>
     <div flex horizontal center-justified layout>
