require firebase element

--- a/app/assets/components/polymer-components.html
+++ b/app/assets/components/polymer-components.html
@@ -23,5 +23,6 @@
  *= require paper-button/paper-button
  *= require paper-progress/paper-progress
  *= require paper-dialog/paper-action-dialog
+ *= require firebase-element/firebase-element
 
 -->
