front end code to grab annotations from firebase rather than rails

--- a/app/assets/components/oj-url-helpers.html
+++ b/app/assets/components/oj-url-helpers.html
@@ -2,6 +2,9 @@
     PolymerExpressions.prototype.paperPath = function(paper_id) {
         return "/papers/"+paper_id
     };
+    PolymerExpressions.prototype.annotationsFirebasePath = function(paper_id){
+        return "https://theoj.firebaseio.com/"+paper_id+"_annotations" 
+    };
     PolymerExpressions.prototype.addReviewerPath = function(paper) {
         return paper ? "/papers/"+paper.sha+"/assign_reviewer" :  ""
     };
